--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Lucas Silveira Cardoso</h1>
+    <img src="OIP.jfif" alt="Augostinho Carrara" width="300px" sizes="300px">
+    <p>Desenvolvedor de Software Júnior</p>
+    <p>Estudante de Engenharia de Software - Católica SC </p>
 </body>
 </html>
