Incluido mais informações

--- a/index.html
+++ b/index.html
@@ -7,9 +7,48 @@
     <title>Lucas Silveira Cardoso</title>
 </head>
 <body>
+    <img src="img/OIP.jfif" alt="Imagem Augostinho Carrara" align="left" width="200px" sizes="200px">
     <h1>Lucas Silveira Cardoso</h1>
-    <img src="OIP.jfif" alt="Augostinho Carrara" width="300px" sizes="300px">
     <p>Desenvolvedor de Software Júnior</p>
-    <p>Estudante de Engenharia de Software - Católica SC </p>
+    <p>ConexãoNF-e</p>
+    <hr>
+    <section>
+        <h2>Formação Acadêmica</h2>
+        <ul>
+            <li><em>Bacharelado em Engenharia de Software - Católica SC (1°Semestre)</em></li>
+            <li><em>Analise e Desenvolvimento de Sistemas - SENAI</em></li>
+            <li><em>Bacharelado em Engenharia da Computação - Unisociesc (Trancado)</em></li>
+        </ul>
+    </section>
+    <section>
+        <h2>Experiências Profissionais</h2>
+        <dl>
+            <dt><b>ConexãoNF-e | 2021-Atual</b></dt>
+            <dd>Desenvolvedor de Software Júnior</dd>
+            <ul>
+                <li><em>Realizando o desenvolvimento de um Software de gestão de notas fiscais</em></li>
+                <li><em>Linguagens utilizadas - Java, Javascript, Kotlin, AngularJS, VueJS</em></li>
+            </ul>
+        </dl>
+        <dl>
+            <dt><b>Samsung | 2020-2021</b></dt>
+            <dd>Auxiliar Técnico em Eletrônica</dd>
+            <ul>
+                <li><em>Reparo de aparelhos eletrônicos (Celulares, Televisores e Computadores)</em></li>
+                <li><em>Habituado em Laudos Técnicos</em></li>
+            </ul>
+        </dl>
+        <dl>
+            <dt><b>Kammoldes | 2018-2019</b></dt>
+            <dd>Auxiliar de PCP</dd>
+            <ul>
+                <li><em>Gestão do processo dentro da fabrica</em></li>
+            </ul>
+        </dl>
+    </section>
+    <hr>
+    <footer>
+        <em>Contato:</em><p><a href="mailto:silveiracardosolucas@gmail.com">📧 silveiracardosolucas@gmail.com</a></p>
+    </footer>
 </body>
 </html>
